[package]
name = "lamprey-markdown"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# TODO: common refuses to compile without a random mishmash of features, i should clean up that code
lamprey-common = { path = "../crate-common", optional = true, default-features = false, features = ["validator", "serde", "utoipa", "ptr_box", "feat_interaction_reaction" ] }
logos = "0.16.1"
rowan = "0.16.1"
uuid = { version = "1.22.0", features = ["serde", "v7"] }
wasm-bindgen = { version = "0.2.117", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.22.0", features = ["serde", "v7", "js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
parallel = []
default = ["dep:lamprey-common", "wasm"]
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde-wasm-bindgen"]
