[package]
name = "lamprey-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "media"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
image = { version = "0.25.6", features = ["avif"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
opendal = { version = "0.54.0", features = ["services-s3"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid"] }
url = "2.5.4"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["catch-panic", "cors", "propagate-header", "trace"] }
anyhow = "1.0.86"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
headers = "0.4.1"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
serde_json = "1.0.143"
percent-encoding = "2.3.2"
thiserror = "2.0.16"
moka = { version = "0.12.10", features = ["future"] }
