[package]
name = "lamprey-media"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "media"
path = "src/main.rs"

[dependencies]
axum = "0.8.8"
image = { version = "0.25.10", features = ["avif"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
opendal = { version = "0.54.1", features = ["services-s3"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
url = "2.5.8"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
http = "1.4.0"
tower-http = { version = "0.6.8", features = ["catch-panic", "cors", "propagate-header", "trace"] }
anyhow = "1.0.102"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "tokio"] }
opentelemetry = "0.30.0"
tracing-opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "logs", "metrics", "reqwest", "tokio", "tracing", "trace"], default-features = false }
headers = "0.4.1"
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
serde_json = "1.0.149"
percent-encoding = "2.3.2"
thiserror = "2.0.18"
moka = { version = "0.12.14", features = ["future"] }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
async-tempfile = "0.7.0"
futures-util = "0.3.32"
tokio-util = { version = "0.7.18", features = ["io"] }
async-recursion = "1.1.1"
async-nats = "0.46.0"
