[package]
name = "lamprey-script"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
cpu-time = "1.0.0"
dashmap = "6.1.0"
http = "1.4.0"
nanoid = "0.5.0"
rquickjs = { version = "0.11.0", features = ["futures", "loader", "macro", "parallel"], optional = true }
rquickjs-serde = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "time"] }
tracing = "0.1.44"
validator = "0.20.0"
wasmtime = { version = "44.0.1", optional = true }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }

[features]
# default = ["javascript"]
default = ["javascript", "wasm"]
javascript = ["dep:rquickjs"]
wasm = ["dep:wasmtime"]
