[package]
name = "lamprey-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.85"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
anyhow = "1.0.95"
futures-util = "0.3.31"
headers = "0.4.0"
