[package]
name = "lamprey-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["fs", "rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
anyhow = "1.0.102"
futures-util = "0.3.32"
headers = "0.4.1"
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
uuid = "1.22"
