[package]
name = "lamprey-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
bytes = "1.11.1"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
dashmap = "6.1.0"
once_cell = "1.21.3"
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
pastey = "0.2.3"
tantivy = "0.26.1"
tokio = { version = "1.50.0", features = ["fs", "rt-multi-thread"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v7", "serde", "v4", "fast-rng", "macro-diagnostics"] }
