[package]
name = "types"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
time = "0.3.37"
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "url", "uuid", "time"], optional = true }
uuid = { version = "1.12.0", features = ["serde"] }
crate-hakari = { version = "0.1", path = "../crate-hakari" }

[features]
utoipa = ["dep:utoipa"]
# default = ["utoipa"]
