[package]
name = "lamprey-unfurl"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
futures-util = "0.3.32"
html5ever = "0.39.0"
ipnet = "2.12.0"
lamprey-common = { version = "0.1.1", path = "../crate-common" }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.50.0"
tracing = "0.1.44"
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["url"] }
