[package]
name = "lamprey-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[[bin]]
name = "voice"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common" }
dashmap = "6.1.0"
fastrand = "2.4.1"
figment = { version = "0.10.19", features = ["env", "json", "toml"] }
futures-util = "0.3.32"
lamprey-backend-core = { version = "0.1.1", path = "../crate-backend-core" }
lamprey-hakari = { version = "0.1", path = "../crate-hakari" }
num_cpus = "1.17.0"
quinn = "0.11.9"
rand = "0.10.0"
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = { version = "0.6.3", features = ["all"] }
str0m = "0.20.0"
systemstat = "0.2.6"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
