[package]
name = "kerosene-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
http = "1.4.2"
lamprey = { package = "lamprey-common", version = "0.1.1", path = "../crate-common" }
lamprey-backend-core = { version = "0.1.1", path = "../crate-backend-core" }
thiserror = "2.0.18"
