[package]
name = "kerosene-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-nats = "0.46.0"
async-tempfile = "0.7.0"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
base32 = "0.5.1"
base64 = "0.22.1"
blake3 = { version = "1.8.3", features = ["mmap"] }
bytes = "1.11.1"
chrono = "0.4.44"
chrono-tz = "0.10.4"
common = { package = "lamprey-common", version = "0.1.0", path = "../crate-common", features = ["utoipa", "validator"] }
constant_time_eq = "0.4.2"
csscolorparser = { version = "0.7.2", features = ["lab"] }
dashmap = "6.1.0"
decancer = "3.3.3"
ece = "2.3.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
flate2 = "1.1.9"
futures = "0.3.32"
futures-util = "0.3.32"
headers = "0.4.1"
http = "1.4.0"
httpdate = "1.0.3"
im = "15.1.0"
image = { version = "0.25.10", features = ["avif"] }
infer = "0.19.0"
jsonwebkey = { version = "0.4.0", features = ["generate"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
kameo = "0.19.2"
lamprey-backend-core = { path = "../crate-backend-core" }
lamprey-backend-data-postgres = { version = "0.1.1", path = "../crate-backend-data-postgres" }
lamprey-macros = { version = "0.1.1", path = "../crate-macros", features = ["use_new_endpoint_macro"] }
lamprey-markdown = { version = "0.1", path = "../crate-markdown" }
lamprey-script = { package = "lamprey-script", version = "0.1.0", path = "../crate-script" }
lamprey-search = { package = "lamprey-search", version = "0.1.0", path = "../crate-search" }
lamprey-unfurl = { version = "0.1", path = "../crate-unfurl" }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "pool", "smtp-transport", "tokio1-rustls-tls"] }
maxminddb = "0.28.1"
mediatype = { version = "0.20.0", features = ["serde"] }
moka = { version = "0.12.14", features = ["future"] }
multer = "3.1.0"
nanoid = "0.4.0"
once_cell = "1.21.3"
opendal = { version = "0.54.1", features = ["services-s3", "services-fs"] }
p256 = { version = "0.13.2", features = ["pkcs8"] }
pastey = "0.2.1"
regex = "1.12.3"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls-native-roots", "json"] }
rmp-serde = "1.3.1"
rrule = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "time", "ipnetwork"] }
subtle = "2.6.1"
tantivy = "0.26.1"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
totp-rs = "5.7.1"
tower-http = { version = "0.6.8", features = ["catch-panic", "cors", "limit", "propagate-header", "sensitive-headers", "trace"] }
tracing = "0.1.41"
url = "2.5.8"
utoipa = { version = "5.4.0", features = ["axum_extras", "url", "uuid"] }
uuid = "1.23.3"
validator = "0.20.0"
yrs = { version = "0.25.0", features = ["sync"] }
