[package]
name = "kerosene"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
axum = "0.8.9"
figment = { version = "0.10.19", features = ["env", "toml"] }
kerosene-rest = { version = "0.1.1", path = "../kerosene-rest" }
kerosene-sync = { version = "0.1.1", path = "../kerosene-sync" }
kerosene-services = { version = "0.1.1", path = "../kerosene-services" }
lamprey-backend-core = { version = "0.1.1", path = "../crate-backend-core" }
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
